# gchemol-readwrite

./: Cargo.toml  README.md
docs/: template_usage.md
src/: formats.rs  io.rs  lib.rs  template.rs
src/formats/: car.rs  cif.rs  cjson.rs  cml.rs  extxyz.rs  gaussian_fchk.rs  gaussian_input.rs  mol2.rs  pdb.rs  sdf.rs  vasp_input.rs  xsd.rs  xyz.rs
src/template/: hbs.rs  jinja.rs  tera.rs
tests/: basic.rs  cif.rs  cjson.rs  cml.rs  gaussian.rs  mol2.rs  pdb.rs  pxyz.rs  sdf.rs  template.rs  vasp.rs  xsd.rs  xyz.rs
tests/files/cjson/: ethane.cjson
tests/files/cml/: Fe.cml
tests/files/templates/: abacus_stru.jinja  test.jinja  xyz.tera
tests/files/xsd/: mol.xsd  pbc.xsd
tests/files/xyz/: ase-vec.xyz  c2h4.pxyz  c2h4.xyz  rx-lst5.xyz
