# [[file:gchemol-readwrite.note::bab3da57][bab3da57]]
[package]
name = "gchemol-readwrite"
version = "0.1.3"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "Reading/writing chemical objects for gchemol"
homepage = "https://github.com/gchemol/gchemol-readwrite"
repository = "https://github.com/gchemol/gchemol-readwrite"
license = "GPL-3.0"
exclude = ["bin/*", "docs/*", "ltxpng/*", "data/*"]

[dependencies]
tempfile = "3"
serde = {version="1", features = ["derive"]}
serde_json = "1"
indexmap = "1"
handlebars = "=4.0"
tera = "1"
gut = { version="0.4", package="gchemol-gut" }
gchemol-core = { version="0.1.3", features=["adhoc"] }
gchemol-parser = "0.4"

[dev-dependencies]

[features]
adhoc = []
# bab3da57 ends here
