# [[file:gchemol-readwrite.note::bab3da57][bab3da57]]
[package]
name = "gchemol-readwrite"
version = "0.1.7"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "Reading/writing chemical objects for gchemol"
homepage = "https://github.com/gchemol/gchemol-readwrite"
repository = "https://github.com/gchemol/gchemol-readwrite"
license = "GPL-3.0"
exclude = ["bin/*", "docs/*", "ltxpng/*", "data/*"]

[dependencies]
tempfile = "3"
serde = {version="1", features = ["derive"]}
serde_json = "1"
indexmap = "1"
handlebars = "=4.0"
minijinja = "0.26.0"
tera = "1"
gut = { version="0.4", package="gchemol-gut" }
gchemol-core = { version="0.1.4", features=["adhoc"] }
gchemol-parser = "0.4.4"
lazy-regex = "2.4.1"
walkdir = "2.3.2"
regex = "1.7.1"
# quick-xml = { version="0.27", features=["serialize"] }
roxmltree = "0.18.0"
vecfx = { version="0.1", features = ["nalgebra"] }

[dev-dependencies]

[features]
adhoc = []
# bab3da57 ends here
